# 02476-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  bentofile.yaml  cloudbuild.yaml  config.yaml  data.dvc  data.py  fashion_features.csv  main.py  mnist_fashion_drift_report.html  mnist_features.csv  model.pkl  model.py  pyproject.toml  report.html  requirements.txt  sklearn_cloud_functions.py  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: autoprecommit.yaml  docker.yaml  linting.yaml  pre-commit-update.yaml  stage_model.yaml  tests.yaml
artifacts/cnn:v3/: model.pth
configs/: config.yaml  eval.yaml  sweep.yaml
configs/model/: default.yaml
configs/training/: default.yaml
dockerfiles/: simple_fastapi.dockerfile  streamlitapp.dockerfile  train.dockerfile  wandb.dockerfile
mlops-m6-repo/: .gitignore  README.md  pyproject.toml  tasks.py
mlops-m6-repo/.devcontainer/: devcontainer.json
mlops-m6-repo/configs/: config.yaml
mlops-m6-repo/dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
mlops-m6-repo/docs/: mkdocs.yaml
reports/: data_drift.html  iris_predictions_log.csv
sample_script/: cloudbuild.yaml  main.py
src/mlops_m6_project/monitoring_exercise_files/: Dockerfile  client.py  pyproject.toml  sentiment_api.py  sentiment_monitoring.dockerfile  sentiment_monitoring.py  text_overview_report.html
src/mlops_m6_project/monitoring_exercise_files/data/requests/: 2026-01-19T15:35:43.391816.json  2026-01-19T15:35:44.257281.json
tests/: __init__.py  test_data.py  test_model.py  test_training.py
(+36 files in other folders)
